# cursor-api

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
crates/__build/src/: _marco.rs  lib.rs
crates/__build/src/_marco/: support.rs
crates/byte_str/src/: lib.rs  serde_impls.rs  utf8.rs
crates/grpc-stream/src/: lib.rs
crates/interned/: Cargo.toml
crates/interned/src/: arc_str.rs  inner.rs  lib.rs  pool.rs  str.rs
crates/interned/src/arc_str/: convert.rs  lifecycle.rs  rkyv.rs  serde.rs  traits.rs
crates/interned/src/inner/: ptr.rs  repr.rs
crates/interned/src/pool/: hasher.rs
crates/interned/src/str/: convert.rs  rkyv.rs  serde.rs  traits.rs
crates/proto-value/: Cargo.toml
crates/proto-value/src/: bytes_value.rs  enum_value.rs  is_default.rs  lib.rs  stringify.rs
crates/rep_move/: Cargo.toml
crates/rep_move/src/: lib.rs
patch/prost-0.14.1/: Cargo.toml
patch/prost-0.14.1/src/: encoding.rs  lib.rs
patch/prost-0.14.1/src/encoding/: varint.rs
patch/reqwest-0.12.18/src/async_impl/: response.rs
patch/scc-3.4.8/: CHANGELOG.md  Cargo.toml
patch/scc-3.4.8/src/: hash_cache.rs  hash_index.rs  hash_map.rs  hash_table.rs  tree_index.rs  utils.rs
patch/scc-3.4.8/src/hash_table/: bucket.rs  bucket_array.rs
patch/scc-3.4.8/src/tests/: models.rs  unit_tests.rs
patch/scc-3.4.8/src/tree_index/: internal_node.rs  leaf.rs  leaf_node.rs  node.rs
patch/vsimd-0.8.0/: Cargo.toml
patch/vsimd-0.8.0/src/: lib.rs  tools.rs
src/: core.rs  main.rs
src/app/: constant.rs  frontend.rs  lazy.rs  model.rs  route.rs
src/app/constant/: header.rs
src/app/model/: alias.rs  checksum.rs  config.rs  default_instructions.rs  dynamic_key.rs  exchange_map.rs  fetch_model.rs  hash.rs  id_source.rs  log.rs  token.rs  vision_ability.rs
src/app/model/log/: command.rs  manager.rs  storage.rs
src/app/model/state/: token.rs
src/app/model/state/token/: queue.rs
src/app/route/: json.rs
src/app/route/json/: body.rs
src/common/: client.rs  model.rs  utils.rs
src/common/model/: cached.rs  error.rs  health.rs  raw_json.rs  userinfo.rs
src/common/model/userinfo/: privacy_mode.rs  usage_info.rs
src/common/utils/: duration_fmt.rs  hex.rs  proto_encode.rs
src/core/: adapter.rs  constant.rs  error.rs  model.rs  service.rs  stream.rs
src/core/adapter/: chat_completions.rs  error.rs  messages.rs  traits.rs  utils.rs
src/core/adapter/utils/: tool_content.rs  tool_id.rs  tool_result.rs
src/core/aiserver/: v1.rs
src/core/auth/: middleware.rs  model.rs  utils.rs
src/core/error/: canonical.rs  cpp.rs  cursor.rs
src/core/model/: anthropic.rs  openai.rs
src/core/route/: health.rs  logs.rs  tokens.rs
src/core/service/: cpp.rs
src/core/stream/: decoder.rs  droppable.rs  hash_chain.rs  session.rs
src/core/stream/decoder/: cpp.rs  direct.rs  types.rs
static/: route-registry.schema.json  route_registry.json
